# trabalhoWeb

./: .gitignore  README.md  app.py  cli.py  pyproject.toml
db/: database.py  filmes.json  generos.json  schema.sql
reviewhub/: __init__.py  cli.py
reviewhub/routes/: auth.py  home.py  movies.py
reviewhub/static/css/: base.css  buttons.css  footer.css  forms.css  messages.css  mine.css  movies-grid.css  nav.css  review-form.css  review.css  style.css  variables.css
reviewhub/static/js/: auth.js  review-form.js  review.js
reviewhub/templates/: base.html  index.html
reviewhub/templates/auth/: login.html  register.html
reviewhub/templates/home/: index.html
reviewhub/templates/movies/: details.html  mine.html  review.html
